# kyusu

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.txt
data/: hyphen.csv  kakko_hiraku.csv  kakko_tojiru.csv  kuten.csv
src/: concatter.h  config.h  preprocess.h  splitter.h  utf8.h
tests/: CMakeLists.txt  test_concatter.cpp  test_config.cpp  test_env.h.in  test_preprocess.cpp  test_splitter.cpp
tests/data/: config.json
